@@ -1,3 +1,9 @@
+2002-07-14  Conrad Scott  <conrad.scott@dsl.pipex.com>
+
+	* cygserver_transport_pipes.cc
+	(transport_layer_pipes::connect): Use ProtectHandle in DLL code.
+	(transport_layer_pipes::close): Use ForceCloseHandle in DLL code.
+
 2002-07-13  Christopher Faylor  <cgf@redhat.com>
 
 	* dcrt0.cc (dll_crt0_1): Delay closing of some handles until cygheap
